--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>folio</title>
 </head>
 <body>
+   <div class="theme-panel open">
+    <div class="theme-body">
+        <span>Change Theme</span>
+        <div class="btn-group">
+            <button class="switcher-btn active">Light</button>
+            <button class="switcher-btn">Dark</button>
+        </div>
+        <button>
+            <i class="fas fa-chevron-left"></i>
+        </button>
+    </div>
+   </div>
     <main class="site-wrapper">
         <header class="site-header">
             <nav class="navbar">
@@ -27,7 +39,24 @@
             </nav>
         </header>
 
-
+        <!-- Hero Section -->
+        <section class="hero-bg">
+            <div class="container">
+                <div class="hero-content">
+                    <div class="code-icon">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <h2 class="header-lg">Code. Eat. Sleep</h2>
+                    <div class="sub-header">I create meaningful solutions for your brands and products.
+                        <br>
+                        Give your customers the best experience possible.
+                    </div>
+                    <div class="btn btn-primary round-pill"> 
+                        <a href="#" data-open="contact">Let's talk now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 <!-- Modals -->
 <!-- About page modal -->
