--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="theme-body">
         <span>Change Theme</span>
         <div class="btn-group">
-            <button class="switcher-btn active">Light</button>
-            <button class="switcher-btn">Dark</button>
+            <button data-toggle="light" class="switcher-btn active">Light</button>
+            <button data-toggle="dark" class="switcher-btn">Dark</button>
         </div>
-        <button>
+        <button class="theme-tab">
             <i class="fas fa-chevron-left"></i>
         </button>
     </div>
@@ -40,7 +40,7 @@
         </header>
 
         <!-- Hero Section -->
-        <section class="hero-bg">
+        <section class="hero-bg ">
             <div class="container">
                 <div class="hero-content">
                     <div class="code-icon">
@@ -57,44 +57,73 @@
                 </div>
             </div>
         </section>
-    </main>
+        <section class="container portfolio-section"></section>
+            <div class="search-container">
+                <label for="search">
+                    <input autocomplete="off" id="search" type="text" class="search-input" placeholder="Search...">
+                    <i class="fas fa-search"></i>
+                </label>
+                <ul class="portfolio-filter-nav ul-defaults-none">
+                    <li class="filter-link active">All Work</li>
+                    <li class="filter-link">Web Development</li>
+                    <li class="filter-link">App Development</li>
+                    <li class="filter-link">UI Design</li>
+                </ul>
+            </div>
+
+            <div class="portfolio-grid">
+
+                <div class="portfolio-card">
+                    <div class="card-body">
+                        <img src="" alt="portfolio icon">
+                        <a href="#" class="card-popup-box">
+                            <div>Web Development</div>
+                            <h3>Food Website</h3>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+
+
+
 <!-- Modals -->
 <!-- About page modal -->
-<div id="about" class="full-site-modal page-block" data-animation="zoomInOut">
-    <header class="modal-header">
-        <h3>ABOUT PAGE</h3>
-        <i class="fas fa-times" data-close></i>
-    </header>
-    <div class="modal-body">
-        <div class="img-wrapper">
-            <img src="./week8imageassets/week 8 image assets/img4.jpg" alt="head shot">
+    <div id="about" class="full-site-modal page-block" data-animation="zoomInOut">
+        <header class="modal-header">
+            <h3>ABOUT PAGE</h3>
+            <i class="fas fa-times" data-close></i>
+        </header>
+        <div class="modal-body">
+            <div class="img-wrapper">
+                <img src="./week8imageassets/imageAssets/img4.jpg" alt="head shot">
+            </div>
+            <h2>Daniel Smith</h2>
+            <p>text 1</p>
+            <p>text 2</p>
+            <div>Email Me:</div>
+            <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
         </div>
-        <h2>Daniel Smith</h2>
-        <p>text 1</p>
-        <p>text 2</p>
-        <div>Email Me:</div>
-        <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
     </div>
-</div>
 
-<!-- contact page modal -->
-<div id="contact" class="full-site-modal page-block" data-animation="zoomInOut">
-    <header class="modal-header">
-        <h3>CONTACT PAGE</h3>
-        <i class="fas fa-times" data-close></i>
-    </header>
-    <div class="modal-body">
-        <div class="img-wrapper">
-            <img src="./week8imageassets/week 8 image assets/img4.jpg" alt="head shot">
+    <!-- contact page modal -->
+    <div id="contact" class="full-site-modal page-block" data-animation="zoomInOut">
+        <header class="modal-header">
+            <h3>CONTACT PAGE</h3>
+            <i class="fas fa-times" data-close></i>
+        </header>
+        <div class="modal-body">
+            <div class="img-wrapper">
+                <img src="./week8imageassets/imageAssets/img4.jpg" alt="head shot">
+            </div>
+            <h2>Daniel Smith</h2>
+            <p>text 1</p>
+            <p>text 2</p>
+            <div>Email Me:</div>
+            <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
         </div>
-        <h2>Daniel Smith</h2>
-        <p>text 1</p>
-        <p>text 2</p>
-        <div>Email Me:</div>
-        <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
     </div>
-</div>
-
+</main>
 
 
 
