--- a/index.html
+++ b/index.html
@@ -194,6 +194,24 @@
             <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
         </div>
     </div>
+
+    <!-- Popup Modals -->
+    <div class="modal">
+        <header class="modal-header">
+            <h3>Web Project 1</h3>
+            <i class="fas fa-times" data-close></i>
+        </header>
+        <div class="modal-body">
+            <div class="img-wrapper">
+                <img src="./week8imageassets/imageAssets/portfolio-1.jpg" alt="portfolio image">
+            </div>
+            <div class="text-wrapper">
+                <p><strong>My first awesome website</strong></p>
+                <P>gihashoashoh</P>
+                <p>kjhaskfhasjhjsfh</p>
+            </div>
+        </div>
+    </div>
 </main>
 
 
