--- a/index.html
+++ b/index.html
@@ -73,83 +73,83 @@
 
             <div class="portfolio-grid">
  
-                <div class="portfolio-card" data-item="web">
+                <div class="portfolio-card" data-item="web" data-open="web-1">
                     <div class="card-body">
                         <img src="./week8imageassets/imageAssets/portfolio-1.jpg" alt="portfolio icon">
-                        <a href="#" class="card-popup-box">
+                        <div class="card-popup-box">
                             <div>Web Development</div>
                             <h3>Food Website</h3>
-                        </a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-item="web">
+                <div class="portfolio-card" data-item="web" data-open="web-2">
                     <div class="card-body">
                         <img src="./week8imageassets/imageAssets/portfolio-2.jpg" alt="portfolio icon">
-                        <a href="#" class="card-popup-box">
+                        <div class="card-popup-box">
                             <div>Web Development</div>
                             <h3>Skate Website</h3>
-                        </a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-item="web">
+                <div class="portfolio-card" data-item="web" data-open="web-3">
                     <div class="card-body">
                         <img src="./week8imageassets/imageAssets/portfolio-3.jpg" alt="portfolio icon">
-                        <a href="#" class="card-popup-box">
+                        <div class="card-popup-box">
                             <div>Web Development</div>
                             <h3>Eating Website</h3>
-                        </a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-item="ui">
+                <div class="portfolio-card" data-item="ui" data-open="ui-1">
                     <div class="card-body">
                         <img src="./week8imageassets/imageAssets/portfolio-4.jpg" alt="portfolio icon">
-                        <a href="#" class="card-popup-box">
+                        <div class="card-popup-box">
                             <div>UI Design</div>
                             <h3>Cool Design</h3>
-                        </a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-item="app">
+                <div class="portfolio-card" data-item="app" data-open="app-1">
                     <div class="card-body">
                         <img src="./week8imageassets/imageAssets/portfolio-5.jpg" alt="portfolio icon">
-                        <a href="#" class="card-popup-box">
+                        <div class="card-popup-box">
                             <div>App Development</div>
                             <h3>Game App</h3>
-                        </a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-item="app">
+                <div class="portfolio-card" data-item="app" data-open="app-2">
                     <div class="card-body">
                         <img src="./week8imageassets/imageAssets/portfolio-6.jpg" alt="portfolio icon">
-                        <a href="#" class="card-popup-box">
+                        <div class="card-popup-box">
                             <div>App Development</div>
                             <h3>Gambling App</h3>
-                        </a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-item="app">
+                <div class="portfolio-card" data-item="app" data-open="app-3">
                     <div class="card-body">
                         <img src="./week8imageassets/imageAssets/portfolio-7.jpg" alt="portfolio icon">
-                        <a href="#" class="card-popup-box">
+                        <div class="card-popup-box">
                             <div>App Development</div>
                             <h3>Money App</h3>
-                        </a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-item="ui">
+                <div class="portfolio-card" data-item="ui" data-open="ui-2">
                     <div class="card-body">
                         <img src="./week8imageassets/imageAssets/portfolio-8.jpg" alt="portfolio icon">
-                        <a href="#" class="card-popup-box">
+                        <div class="card-popup-box">
                             <div>UI Design</div>
                             <h3>Fantastic Design</h3>
-                        </a>
+                        </div>
                     </div>
                 </div>
 
@@ -161,24 +161,27 @@
 <!-- Modals -->
 <!-- About page modal -->
     <div id="about" class="full-site-modal page-block" data-animation="zoomInOut">
-        <header class="modal-header">
-            <h3>ABOUT PAGE</h3>
-            <i class="fas fa-times" data-close></i>
-        </header>
-        <div class="modal-body">
-            <div class="img-wrapper">
-                <img src="./week8imageassets/imageAssets/img4.jpg" alt="head shot">
+        <div class="container-fluid">
+            <header class="modal-header">
+                <h3>ABOUT PAGE</h3>
+                <i class="fas fa-times" data-close></i>
+            </header>
+            <div class="modal-body">
+                <div class="img-wrapper">
+                    <img src="./week8imageassets/imageAssets/img4.jpg" alt="head shot">
+                </div>
+                <h2>Daniel Smith</h2>
+                <p>text 1</p>
+                <p>text 2</p>
+                <div>Email Me:</div>
+                <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
             </div>
-            <h2>Daniel Smith</h2>
-            <p>text 1</p>
-            <p>text 2</p>
-            <div>Email Me:</div>
-            <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
         </div>
     </div>
 
     <!-- contact page modal -->
     <div id="contact" class="full-site-modal page-block" data-animation="zoomInOut">
+       <div class="container-fluid">
         <header class="modal-header">
             <h3>CONTACT PAGE</h3>
             <i class="fas fa-times" data-close></i>
@@ -193,22 +196,151 @@
             <div>Email Me:</div>
             <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
         </div>
+       </div>
     </div>
 
     <!-- Popup Modals -->
-    <div class="modal">
-        <header class="modal-header">
-            <h3>Web Project 1</h3>
-            <i class="fas fa-times" data-close></i>
-        </header>
-        <div class="modal-body">
-            <div class="img-wrapper">
-                <img src="./week8imageassets/imageAssets/portfolio-1.jpg" alt="portfolio image">
+    <div id="web-1" class="modal" data-animation="slideInOutTop">
+        <div class="modal-dialog" data-animation="slideInOutTop">
+            <header class="modal-header">
+                <h3>Web Project 1</h3>
+                <i class="fas fa-times" data-close></i>
+            </header>
+            <div class="modal-body">
+                <div class="img-wrapper">
+                    <img src="./week8imageassets/imageAssets/portfolio-1.jpg" alt="portfolio image">
+                </div>
+                <div class="text-wrapper">
+                    <p><strong>My first awesome website</strong></p>
+                    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
             </div>
-            <div class="text-wrapper">
-                <p><strong>My first awesome website</strong></p>
-                <P>gihashoashoh</P>
-                <p>kjhaskfhasjhjsfh</p>
+        </div>
+    </div>
+    <div id="web-2" class="modal" data-animation="slideInOutTop">
+        <div class="modal-dialog" data-animation="slideInOutTop">
+            <header class="modal-header">
+                <h3>Web Project 2</h3>
+                <i class="fas fa-times" data-close></i>
+            </header>
+            <div class="modal-body">
+                <div class="img-wrapper">
+                    <img src="./week8imageassets/imageAssets/portfolio-2.jpg" alt="portfolio image">
+                </div>
+                <div class="text-wrapper">
+                    <p><strong>My first awesome website</strong></p>
+                    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="web-3" class="modal" data-animation="slideInOutTop">
+        <div class="modal-dialog" data-animation="slideInOutTop">
+            <header class="modal-header">
+                <h3>Web Project 3</h3>
+                <i class="fas fa-times" data-close></i>
+            </header>
+            <div class="modal-body">
+                <div class="img-wrapper">
+                    <img src="./week8imageassets/imageAssets/portfolio-3.jpg" alt="portfolio image">
+                </div>
+                <div class="text-wrapper">
+                    <p><strong>My first awesome website</strong></p>
+                    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="app-1" class="modal" data-animation="slideInOutTop">
+        <div class="modal-dialog" data-animation="slideInOutTop">
+            <header class="modal-header">
+                <h3>App Project 1</h3>
+                <i class="fas fa-times" data-close></i>
+            </header>
+            <div class="modal-body">
+                <div class="img-wrapper">
+                    <img src="./week8imageassets/imageAssets/portfolio-4.jpg" alt="portfolio image">
+                </div>
+                <div class="text-wrapper">
+                    <p><strong>My first awesome website</strong></p>
+                    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="app-2" class="modal" data-animation="slideInOutTop">
+        <div class="modal-dialog" data-animation="slideInOutTop">
+            <header class="modal-header">
+                <h3>App Project 2</h3>
+                <i class="fas fa-times" data-close></i>
+            </header>
+            <div class="modal-body">
+                <div class="img-wrapper">
+                    <img src="./week8imageassets/imageAssets/portfolio-5.jpg" alt="portfolio image">
+                </div>
+                <div class="text-wrapper">
+                    <p><strong>My first awesome website</strong></p>
+                    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="app-3" class="modal" data-animation="slideInOutTop">
+        <div class="modal-dialog" data-animation="slideInOutTop">
+            <header class="modal-header">
+                <h3>App Project 3</h3>
+                <i class="fas fa-times" data-close></i>
+            </header>
+            <div class="modal-body">
+                <div class="img-wrapper">
+                    <img src="./week8imageassets/imageAssets/portfolio-6.jpg" alt="portfolio image">
+                </div>
+                <div class="text-wrapper">
+                    <p><strong>My first awesome website</strong></p>
+                    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="ui-1" class="modal" data-animation="slideInOutTop">
+        <div class="modal-dialog" data-animation="slideInOutTop">
+            <header class="modal-header">
+                <h3>UI Project 1</h3>
+                <i class="fas fa-times" data-close></i>
+            </header>
+            <div class="modal-body">
+                <div class="img-wrapper">
+                    <img src="./week8imageassets/imageAssets/portfolio-7.jpg" alt="portfolio image">
+                </div>
+                <div class="text-wrapper">
+                    <p><strong>My first awesome website</strong></p>
+                    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="ui-2" class="modal" data-animation="slideInOutTop">
+        <div class="modal-dialog" data-animation="slideInOutTop">
+            <header class="modal-header">
+                <h3>UI Project 2</h3>
+                <i class="fas fa-times" data-close></i>
+            </header>
+            <div class="modal-body">
+                <div class="img-wrapper">
+                    <img src="./week8imageassets/imageAssets/portfolio-8.jpg" alt="portfolio image">
+                </div>
+                <div class="text-wrapper">
+                    <p><strong>My first awesome website</strong></p>
+                    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
             </div>
         </div>
     </div>
