--- a/index.html
+++ b/index.html
@@ -158,6 +158,43 @@
 
         </section>
 
+        <section class="reviews">
+            <div class="review-title">What People Say</div>
+            <h2 class="header-md">Trusted by Clients</h2>
+            <div class="review-preview">
+                <img src="./week8imageassets/imageAssets/cube.png" alt="cube">
+            </div>
+
+            <div class="review-carousel">
+
+                <div class="review-item">
+                   <div class="review-text">
+                    #1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec vulputate augue, vel suscipit lectus. Sed turpis.
+                   </div> 
+                   <div class="review-author">
+                    <div class="avatar">
+                        <img src="./week8imageassets/imageAssets/ava-1.jpg" alt="avatar">
+                    </div>
+                    <div class="details">
+                       <div class="name">Daniel Smith</div>
+                       <div class="company">Skate World Wide</div>
+                    </div>
+                   </div>
+                </div>
+
+            </div>
+
+            <div class="slide-ctrl-container">
+                <button>
+                    <i class="fas fa-arrow-left"></i>
+                </button>
+                <button>
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+            </div>
+
+        </section>
+
 <!-- Modals -->
 <!-- About page modal -->
     <div id="about" class="full-site-modal page-block" data-animation="zoomInOut">
@@ -212,8 +249,8 @@
                 </div>
                 <div class="text-wrapper">
                     <p><strong>My first awesome website</strong></p>
-                    <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec vulputate augue, vel suscipit lectus. Sed turpis urna, pellentesque ac facilisis ut, suscipit ut massa. Duis.</P>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec vulputate augue, vel suscipit lectus. Sed turpis urna, pellentesque ac facilisis ut, suscipit ut massa. Duis.</p>
                 </div>
             </div>
         </div>
