--- a/index.html
+++ b/index.html
@@ -177,10 +177,55 @@
                     </div>
                     <div class="details">
                        <div class="name">Daniel Smith</div>
-                       <div class="company">Skate World Wide</div>
+                       <div class="company">Skate Nation</div>
                     </div>
                    </div>
                 </div>
+
+                <div class="review-item">
+                    <div class="review-text">
+                     #2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec vulputate augue, vel suscipit lectus. Sed turpis.
+                    </div> 
+                    <div class="review-author">
+                     <div class="avatar">
+                         <img src="./week8imageassets/imageAssets/ava-1.jpg" alt="avatar">
+                     </div>
+                     <div class="details">
+                        <div class="name">John Doe</div>
+                        <div class="company">Skate Universe</div>
+                     </div>
+                    </div>
+                 </div>
+
+                 <div class="review-item">
+                    <div class="review-text">
+                     #3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec vulputate augue, vel suscipit lectus. Sed turpis.
+                    </div> 
+                    <div class="review-author">
+                     <div class="avatar">
+                         <img src="./week8imageassets/imageAssets/ava-1.jpg" alt="avatar">
+                     </div>
+                     <div class="details">
+                        <div class="name">Jane doe</div>
+                        <div class="company">Skate World Wide</div>
+                     </div>
+                    </div>
+                 </div>
+
+                 <div class="review-item">
+                    <div class="review-text">
+                     #4 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec vulputate augue, vel suscipit lectus. Sed turpis.
+                    </div> 
+                    <div class="review-author">
+                     <div class="avatar">
+                         <img src="./week8imageassets/imageAssets/ava-1.jpg" alt="avatar">
+                     </div>
+                     <div class="details">
+                        <div class="name">Hello World</div>
+                        <div class="company">Skate Dang</div>
+                     </div>
+                    </div>
+                 </div>
 
             </div>
 
@@ -386,5 +431,6 @@
 
 
     <script src="js/main.js"></script>
+    <script src="js/carousel.js"></script>
 </body>
 </html>
