--- a/index.html
+++ b/index.html
@@ -252,11 +252,29 @@
                 <div class="img-wrapper">
                     <img src="./week8imageassets/imageAssets/img4.jpg" alt="head shot">
                 </div>
-                <h2>Daniel Smith</h2>
-                <p>text 1</p>
-                <p>text 2</p>
-                <div>Email Me:</div>
-                <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
+                <div class="about-text">
+                    <h2 class="header-md">Daniel Smith</h2>
+                    <p>Full Stack Developer based in Texas, USA. Nobody can see how elegant my code is...So I snapshot it, frame it, and hang it on my wall.</p>
+                    <p>I write code like i diet - lean. jk. It's more like Taco Bell Beefy 5 layer Burrito...which is still leaner than some other foods.</p>
+                    <div class="contact-me-block">
+                        <div>Email Me: </div>
+                        <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="marquee">
+                <ul class="marquee-content">
+                    <li><i class="fab fa-github"></i></li>
+                    <li><i class="fab fa-codepen"></i></li>
+                    <li><i class="fab fa-dev"></i></li>
+                    <li><i class="fab fa-vuejs"></i></li>
+                    <li><i class="fab fa-angular"></i></li>
+                    <li><i class="fab fa-node"></i></li>
+                    <li><i class="fab fa-aws"></i></li>
+                    <li><i class="fab fa-docker"></i></li>
+                    <li><i class="fab fa-android"></i></li>
+                </ul>
+                
             </div>
         </div>
     </div>
@@ -269,14 +287,18 @@
             <i class="fas fa-times" data-close></i>
         </header>
         <div class="modal-body">
-            <div class="img-wrapper">
-                <img src="./week8imageassets/imageAssets/img4.jpg" alt="head shot">
+            <div class="contact-text">
+                <h2 class="header-md">Daniel Smith</h2>
+                <div>have a product or question? Send me a message.</div>
+                <div>I will reply within 48 hours.</div>
             </div>
-            <h2>Daniel Smith</h2>
-            <p>text 1</p>
-            <p>text 2</p>
-            <div>Email Me:</div>
-            <a href="mailto:danjsmith3@gmail.com">danjsmith3@gmail.com</a>
+            <form class="folio-form">
+                <input class="form-control" name="name" type="text" placeholder="Name">
+                <input class="form-control" name="email" type="email" placeholder="Email">
+                <input class="form-control" name="subject" type="text" placeholder="Subject">
+                <textarea class="form-control" name="message" cols="30" rows="3" placeholder="Write your message...."></textarea>
+                <input type="submit" value="Send" class="btn btn-primary round-pill" >
+            </form>
         </div>
        </div>
     </div>
